# Project_Django

./: .env.example  .gitignore  README  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/fixtures/: category_data.json  product_data.json
catalog/management/commands/: fill_products.py
catalog/migrations/: 0001_initial.py
catalog/templates/: contacts.html  home.html
config/: settings.py  urls.py
